# nodedb

./: .gitignore  Cargo.toml  LICENSE.md  README.md
nodedb/: Cargo.toml  build.rs
nodedb-array/: Cargo.toml
nodedb-array/src/: error.rs  lib.rs
nodedb-bridge/: Cargo.toml
nodedb-bridge/benches/: throughput.rs
nodedb-bridge/src/: async_bridge.rs  backpressure.rs  buffer.rs  envelope.rs  error.rs  eventfd.rs  lib.rs  telemetry.rs  tokio_fd.rs
nodedb-bridge/tests/: cross_runtime.rs  send_safety.rs  throughput.rs
nodedb-cli/: Cargo.toml
nodedb-cli/src/: args.rs  batch.rs  completion.rs  config.rs  connect.rs  highlight.rs  history.rs  keywords.rs  main.rs  metacommand.rs
nodedb-client/: Cargo.toml
nodedb-client/src/: capabilities.rs  lib.rs  remote.rs  remote_parse.rs  traits.rs
nodedb-cluster/: Cargo.toml
nodedb-cluster/src/: array_routing.rs  bootstrap.rs  catalog.rs  circuit_breaker.rs  closed_timestamp.rs  cluster_epoch.rs  cluster_info.rs  conf_change.rs  cross_shard_txn.rs  distributed_join.rs  error.rs  follower_read.rs  ghost.rs  ghost_sweeper.rs  health.rs  lib.rs  lifecycle_state.rs  loop_metrics.rs  metadata_group.rs  migration.rs  migration_executor.rs  multi_raft.rs  quic_transport.rs  raft_loop.rs  raft_storage.rs  rdma_transport.rs  readiness.rs  rebalance.rs  rebalance_scheduler.rs  routing.rs  routing_liveness.rs  rpc_codec.rs  shard_split.rs  sync_frame_versioned.rs  topology.rs  vshard_handler.rs  wire.rs
nodedb-cluster/tests/: bootstrap_listener_join.rs  calvin_3node_normal.rs  calvin_3node_shard_failover.rs  calvin_e2e_pgwire.rs  calvin_sequencer_failover.rs  calvin_sequencer_starvation.rs  cluster_join.rs  cluster_join_idempotent.rs  cluster_join_leader_crash.rs  cluster_join_race.rs  cluster_join_redirect.rs  elastic_scaling.rs  metadata_replication.rs  migration_crash_recovery.rs  phase3_gates.rs  reachability_loop.rs  rebalancer_loop.rs  swim_routing_invalidation.rs  swim_udp_convergence.rs  transport_security.rs  wire_version_handshake.rs
nodedb-codec/: Cargo.toml
nodedb-codec/src/: alp.rs  alp_rd.rs  crdt_compress.rs  detect.rs  error.rs  lib.rs  spherical.rs  zstd_codec.rs
nodedb-columnar/: Cargo.toml
nodedb-columnar/src/: compaction.rs  delete_bitmap.rs  encrypt.rs  error.rs  format.rs  lib.rs  mutation.rs  pk_index.rs  predicate.rs  reader.rs  wal_record.rs  writer.rs
nodedb-columnar/tests/: large_i64_pushdown.rs
nodedb-crdt/: Cargo.toml
nodedb-crdt/src/: constraint.rs  constraint_checks.rs  dead_letter.rs  deferred.rs  error.rs  lib.rs  list_ops.rs  policy.rs  pre_validate.rs  signing.rs  state.rs  validator.rs
nodedb-crdt/tests/: crdt_sql_paradox.rs  wire_enum_lock.rs
nodedb-fts/: Cargo.toml
nodedb-fts/src/: block.rs  lib.rs  posting.rs
nodedb-graph/: Cargo.toml
nodedb-graph/src/: error.rs  lib.rs  sharded.rs  traversal.rs
nodedb-lite/: Cargo.toml
nodedb-lite-wasm/: Cargo.toml
nodedb-lite-wasm/src/: lib.rs  opfs_backend.rs
nodedb-lite-wasm/tests/: browser.rs
nodedb-lite/examples/: live_sync.rs  load_test.rs
nodedb-lite/src/: event.rs  lib.rs  sequence.rs
nodedb-lite/tests/: compensation.rs  concurrency.rs  crash_recovery.rs  htap.rs  integration.rs  shape_perf.rs  shape_subscription.rs
nodedb-mem/: Cargo.toml
nodedb-mem/src/: arena.rs  budget.rs  budget_guard.rs  collection_arena.rs  datafusion_pool.rs  engine.rs  governor.rs  lib.rs  metrics.rs  overflow.rs  pressure.rs  spill.rs
nodedb-mem/tests/: datafusion_integration.rs
nodedb-query/: Cargo.toml
nodedb-query/src/: agg_key.rs  expr_parse.rs  functions.rs  geo_functions.rs  lib.rs  metadata_filter.rs  scan_filter.rs  simd_agg.rs  value_ops.rs  window.rs
nodedb-raft/: Cargo.toml
nodedb-raft/src/: error.rs  lib.rs  log.rs  message.rs  snapshot_framing.rs  state.rs  storage.rs  transport.rs
nodedb-spatial/: Cargo.toml
nodedb-spatial/src/: geohash_index.rs  hybrid.rs  lib.rs  operations.rs  persist.rs  spatial_join.rs  validate.rs  wkb.rs  wkt.rs
nodedb-sql/: Cargo.toml
nodedb-sql/src/: aggregate_walk.rs  coerce.rs  dsl_bind.rs  error.rs  fts_types.rs  lib.rs  params.rs  reserved.rs  temporal.rs  types.rs  types_expr.rs
nodedb-sql/tests/: ddl_constraint_rejection.rs  schema_qualified_rejection.rs
nodedb-strict/: Cargo.toml
nodedb-strict/src/: arrow_extract.rs  decode.rs  encode.rs  error.rs  lib.rs
nodedb-types/: Cargo.toml
nodedb-types/src/: backup_envelope.rs  bbox.rs  collection.rs  collection_config.rs  datetime.rs  document.rs  dropped_collection.rs  error.rs  filter.rs  geometry.rs  gorilla.rs  graph.rs  hlc.rs  hnsw.rs  id.rs  id_gen.rs  json_msgpack.rs  kv.rs  kv_parsing.rs  lib.rs  lsn.rs  multi_vector.rs  namespace.rs  protocol.rs  result.rs  sparse_vector.rs  text_search.rs  timeseries.rs  trace.rs  value.rs  vector_ann.rs  vector_distance.rs  vector_index_stats.rs  vector_model.rs  wire_time.rs  wire_version.rs
nodedb-types/tests/: wire_enum_lock.rs
nodedb-vector/: Cargo.toml
nodedb-vector-gpu/: Cargo.toml
nodedb-vector-gpu/src/: cagra.rs  cuvs_build.rs  error.rs  lib.rs
nodedb-vector/src/: adaptive_filter.rs  builder.rs  error.rs  flat.rs  hnsw.rs  index_config.rs  ivf.rs  lib.rs  matryoshka.rs  mmap_segment.rs
nodedb-vector/tests/: collection_checkpoint_tombstones.rs  collection_compact_doc_map.rs  collection_pq_config.rs  hnsw_checkpoint_encryption.rs  quantize_kmeans_distribution.rs  simd_length_safety.rs
nodedb-wal/: Cargo.toml
nodedb-wal/benches/: wal_throughput.rs
nodedb-wal/src/: align.rs  crypto.rs  double_write.rs  error.rs  group_commit.rs  lazy_reader.rs  lib.rs  mmap_reader.rs  preamble.rs  reader.rs  record.rs  recovery.rs  secure_mem.rs  segment.rs  segmented.rs  temporal_purge.rs  uring_writer.rs  writer.rs
nodedb-wal/tests/: crash_recovery.rs  mmap_reader_madvise.rs  o_direct_alignment.rs  wal_collection_tombstone.rs  wal_encryption.rs
nodedb/src/: error.rs  fail_point.rs  lib.rs  main.rs  version.rs
nodedb/tests/: array_cluster_sync.rs  (+132 more)
synapsedb-bridge/: Cargo.toml
synapsedb-crdt/: Cargo.toml
synapsedb-mem/: Cargo.toml
synapsedb-wal/: Cargo.toml
(+2099 files in other folders)
