[workspace]
members = [
  "nodedb",
  "nodedb-bridge",
  "nodedb-wal",
  "nodedb-mem",
  "nodedb-crdt",
  "nodedb-raft",
  "nodedb-cluster",
  "nodedb-types",
  "nodedb-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "BUSL-1.1"

[workspace.dependencies]
# Foundation crates (internal)
nodedb-types = { path = "nodedb-types" }
nodedb-client = { path = "nodedb-client" }
nodedb-bridge = { path = "nodedb-bridge" }
nodedb-wal = { path = "nodedb-wal" }
nodedb-mem = { path = "nodedb-mem" }
nodedb-crdt = { path = "nodedb-crdt" }
nodedb-raft = { path = "nodedb-raft" }
nodedb-cluster = { path = "nodedb-cluster" }

# Async runtimes
tokio = { version = "1", features = ["full"] }

# Error handling & diagnostics
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Memory
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

# System
libc = "0.2"

# Checksums
crc32c = "0.6"

# Crypto
hmac = "0.12"
base64 = "0.22"
getrandom = { version = "0.3", features = ["std"] }

# Cold storage
parquet = "57"
object_store = { version = "0.13", features = ["aws"] }
bytes = "1"

# io_uring
io-uring = "0.7"

# CRDTs
loro = "1"

# Query engine
datafusion = "52"
datafusion-common = "52"
datafusion-execution = "52"
datafusion-expr = "52"
datafusion-physical-plan = "52"

# Config & serialization
toml = "0.8"
anyhow = "1"
serde_json = "1"

# MessagePack
rmp-serde = "1"
rmpv = "1"

# Zero-copy serialization
rkyv = { version = "0.8", features = ["alloc"] }

# WebSocket
tokio-tungstenite = "0.29"

# Storage
redb = "2"
roaring = "0.10"

# Temp files (external sort spill)
tempfile = "3"

# Text search
rust-stemmers = "1"
unicode-normalization = "0.1"

# Random
rand = "0.9"

# QUIC transport
quinn = "0.11"

# Ecosystem
numr = "0.5"
nexar = "0.1"

# Compression
zstd = "0.13"

# PostgreSQL wire protocol
pgwire = { version = "0.38", default-features = false, features = [
  "server-api-aws-lc-rs",
] }
tokio-postgres = "0.7"
async-trait = "0.1"
futures = "0.3"

# Password hashing
argon2 = "0.5"

# Encryption at rest
aes-gcm = "0.10"

# MD5 (for pgwire MD5 auth compatibility)
md5 = "0.8"

# HTTP API
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"

# Benchmarking
fluxbench = "0.1"
