[workspace]
members = [
  "nodedb",
  "nodedb-bridge",
  "nodedb-wal",
  "nodedb-mem",
  "nodedb-crdt",
  "nodedb-raft",
  "nodedb-cluster",
  "nodedb-types",
  "nodedb-client",
  "nodedb-lite",
  "nodedb-lite-ffi",
  "nodedb-lite-wasm",
  "nodedb-cli",
  "nodedb-query",
  "nodedb-codec",
  "nodedb-spatial",
  "nodedb-graph",
  "nodedb-vector",
  "nodedb-fts",
  "nodedb-strict",
  "nodedb-columnar",
  "nodedb-sql",
]
resolver = "2"

[workspace.package]
version = "0.0.0-beta.1"
edition = "2024"
rust-version = "1.94"
license = "BUSL-1.1"
readme = "README.md"
repository = "https://github.com/NodeDB-Lab/nodedb"
homepage = "https://nodedb.dev"
documentation = "https://docs.rs/nodedb"

[workspace.dependencies]
# Foundation crates (internal)
nodedb-types = { path = "nodedb-types", version = "0.0.0-beta.1" }
nodedb-client = { path = "nodedb-client", version = "0.0.0-beta.1" }
nodedb-lite = { path = "nodedb-lite", version = "0.0.0-beta.1", default-features = false }
nodedb-bridge = { path = "nodedb-bridge", version = "0.0.0-beta.1" }
nodedb-wal = { path = "nodedb-wal", version = "0.0.0-beta.1" }
nodedb-mem = { path = "nodedb-mem", version = "0.0.0-beta.1" }
nodedb-crdt = { path = "nodedb-crdt", version = "0.0.0-beta.1" }
nodedb-raft = { path = "nodedb-raft", version = "0.0.0-beta.1" }
nodedb-cluster = { path = "nodedb-cluster", version = "0.0.0-beta.1" }
nodedb-query = { path = "nodedb-query", version = "0.0.0-beta.1" }
nodedb-codec = { path = "nodedb-codec", version = "0.0.0-beta.1" }
nodedb-spatial = { path = "nodedb-spatial", version = "0.0.0-beta.1" }
nodedb-graph = { path = "nodedb-graph", version = "0.0.0-beta.1" }
nodedb-vector = { path = "nodedb-vector", version = "0.0.0-beta.1" }
nodedb-fts = { path = "nodedb-fts", version = "0.0.0-beta.1" }
nodedb-strict = { path = "nodedb-strict", version = "0.0.0-beta.1" }
nodedb-columnar = { path = "nodedb-columnar", version = "0.0.0-beta.1" }
nodedb-sql = { path = "nodedb-sql", version = "0.0.0-beta.1" }

# Async runtimes
tokio = { version = "1", features = ["full"] }

# Error handling & diagnostics
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Memory
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

# System
libc = "0.2"

# Checksums
crc32c = "0.6"

# Crypto
hmac = "0.12"
base64 = "0.22"
getrandom = { version = "0.3", features = ["std"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }

# JWT / JWKS (EC key support for ES256/ES384)
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }

# HTTP client (JWKS fetch)
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }

# Hashing
sha2 = { version = "0.10", features = ["oid"] }

# WASM runtime
wasmtime = { version = "30", default-features = false, features = [
  "cranelift",
  "runtime",
] }

# Memory-mapped I/O
memmap2 = "0.9"

# Cold storage
parquet = "58"
object_store = { version = "0.13", features = ["aws"] }
bytes = "1"

# io_uring
io-uring = "0.7"

# CRDTs
loro = "1"

# Kafka bridge
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Regex
regex = "1"

# Protobuf + compression (Prometheus remote write/read, OTLP)
prost = "0.13"
snap = "1"
flate2 = "1"
tonic = "0.14"

# Arrow (columnar format)
arrow = { version = "58", default-features = false, features = ["ipc"] }

# Config & serialization
toml = "0.8"
anyhow = "1"
serde_json = "1"
sonic-rs = "0.5"
chrono = { version = "0.4", features = ["std"], default-features = false }

# MessagePack
rmpv = "1"
zerompk = { version = "0.3", features = ["std", "derive"] }

# Bitmap
roaring = "0.11"

# Zero-copy serialization
rkyv = { version = "0.8", features = ["alloc"] }

# WebSocket
tokio-tungstenite = "0.29"

# Storage
redb = "2"

# Temp files (external sort spill)
tempfile = "3"

# Text search
rust-stemmers = "1"
unicode-normalization = "0.1"

# Fast hashing for integer keys (GROUP BY aggregation)
rustc-hash = "2"

# Fast parsing (CSV bulk import)
memchr = "2.7"
lexical-core = "1"

# Random
rand = "0.9"

# ID types
uuid = { version = "1", features = ["v4", "v7", "serde"] }
ulid = "1"
nanoid = "0.4"

# Arbitrary-precision decimal
rust_decimal = { version = "1", features = ["serde-with-str"] }

# QUIC transport
quinn = "0.11"

# Ecosystem
nexar = "0.1"

# H3 hexagonal spatial index
h3o = "0.9"

# Compression
zstd = "0.13"
lz4_flex = { version = "0.11", default-features = false, features = [
  "safe-encode",
  "safe-decode",
] }
pco = "1"

# PostgreSQL wire protocol
pgwire = { version = "0.38", default-features = false, features = [
  "server-api-aws-lc-rs",
] }
tokio-postgres = "0.7"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"


# MD5 (for pgwire MD5 auth compatibility)
md5 = "0.8"

# HTTP API
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = [
  "aws-lc-rs",
] }
rustls-pemfile = "2"

# Benchmarking
fluxbench = "0.1"

# CLI / TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.debugging]
inherits = "dev"
debug = true
