[package]
name = "nodedb-cli"
description = "NodeDB terminal UI and CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "ndb"
path = "src/main.rs"

[dependencies]
nodedb-client = { workspace = true, features = ["native"] }
nodedb-types = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
