[package]
name = "nodedb-cluster"
description = "Distributed coordination layer for NodeDB — vShards, QUIC transport, and replication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace crates
nodedb-raft = { workspace = true }
nodedb-types = { workspace = true }

# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

# Serialization (compact binary for RPCs — matches nexar wire format)
rkyv = { workspace = true }

# Checksums
crc32c = { workspace = true }

# Persistence
redb = { workspace = true }
rmp-serde = { workspace = true }
zerompk = { workspace = true }

# QUIC transport (nexar for TLS utilities, quinn for bidi streams)
nexar = { workspace = true }
quinn = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
tempfile = "3"
