[package]
name = "nodedb-cluster"
description = "Distributed coordination layer for NodeDB — vShards, QUIC transport, and replication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace crates
nodedb-raft = { workspace = true }
nodedb-types = { workspace = true }

# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }

# Serialization (compact binary for RPCs — matches nexar wire format)
rkyv = { workspace = true }

# Checksums
crc32c = { workspace = true }

# Authenticated frame envelope (origin + anti-replay MAC) for Raft RPCs.
hmac = { workspace = true }
sha2 = { workspace = true }

# Persistence
redb = { workspace = true }
zerompk = { workspace = true }

# QUIC transport (nexar for TLS utilities, quinn for bidi streams)
nexar = { workspace = true }
quinn = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = { workspace = true }

# systemd sd_notify readiness integration — Linux only.
# Wrapped by `crate::readiness` so non-Linux builds no-op cleanly.
[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
tempfile = "3"
