[package]
name = "nodedb-crdt"
description = "CRDT engine with SQL constraint validation and dead-letter queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
loro = { workspace = true }
serde = { workspace = true }
nodedb-types = { workspace = true }
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
tokio = { workspace = true }
