[package]
name = "nodedb-fts"
description = "Shared full-text search engine for NodeDB — inverted index, BM25 scoring, analyzers, fuzzy matching"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
lang-ja = ["dep:lindera"]
# lang-zh currently falls back to CJK bigrams. The previous dictionary-based
# implementation pulled jieba-rs → include-flate → libflate → yanked core2,
# which breaks `cargo publish`. Re-enable once the upstream chain is fixed.
lang-zh = []
lang-ko = ["dep:lindera"]
lang-th = ["dep:icu_segmenter"]
lang-detect = ["dep:whatlang"]
lang-cjk = ["lang-ja", "lang-zh", "lang-ko"]
lang-all = ["lang-cjk", "lang-th", "lang-detect"]

[dependencies]
nodedb-types = { workspace = true }
serde = { workspace = true }
zerompk = { workspace = true }
rust-stemmers = { workspace = true }
unicode-normalization = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
crc32c = "0.6"

# Optional: dictionary-based CJK segmentation
lindera = { version = "2.3", optional = true }
icu_segmenter = { version = "1", optional = true }
whatlang = { version = "0.18", optional = true }

[dev-dependencies]
