[package]
name = "nodedb-graph"
description = "Shared graph engine (CSR adjacency index + traversal) for NodeDB Origin and Lite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nodedb-types = { workspace = true }
serde = { workspace = true }
rmpv = { workspace = true }
zerompk = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
sonic-rs = { workspace = true }
