[package]
name = "nodedb-lite"
description = "Embedded edge client for NodeDB — offline vector search, graph traversal, and CRDT sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]

[dependencies]
nodedb-types = { workspace = true }
nodedb-client = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }

# Storage backend (feature-gated)
rusqlite = { workspace = true, optional = true }

# Async runtime (native only — WASM uses wasm-bindgen-futures)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = { workspace = true }
