[package]
name = "nodedb-mem"
description = "Global NUMA-aware memory governor preventing subsystem OOM and cache cannibalization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
datafusion = ["dep:datafusion-execution", "dep:datafusion-common"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tikv-jemallocator = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }
libc = { workspace = true }
datafusion-common = { workspace = true, optional = true }
datafusion-execution = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
fluxbench = { workspace = true }
tracing-subscriber = { workspace = true }
datafusion-common = { workspace = true }
datafusion-execution = { workspace = true }
tempfile = "3"
