[package]
name = "nodedb-raft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Workspace
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization (compact binary for RPCs)
rkyv = { version = "0.8", features = ["alloc"] }

# Random for election timeouts
rand = { workspace = true }

# Timestamps
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
