[package]
name = "nodedb-raft"
description = "Raft consensus engine for NodeDB — leader election, log replication, and snapshots"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization (compact binary for RPCs)
rkyv = { workspace = true }
zerompk = { workspace = true }

# Random for election timeouts
rand = { workspace = true }

# Checksums
crc32c = { workspace = true }

# Timestamps
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
