[package]
name = "nodedb-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQL parser, planner, and optimizer for NodeDB"

[dependencies]
nodedb-types = { workspace = true }
nodedb-query = { workspace = true }
sqlparser = "0.61"
thiserror = { workspace = true }
