[package]
name = "nodedb-types"
description = "Portable type definitions shared between NodeDB Origin and NodeDB-Lite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rmp-serde = { workspace = true }
rkyv = { workspace = true }
