[package]
name = "nodedb-wal"
description = "Deterministic O_DIRECT write-ahead log with io_uring group commit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
io-uring = ["dep:io-uring"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
crc32c = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
io-uring = { workspace = true, optional = true }
aes-gcm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
fluxbench = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
io-uring = { workspace = true }

[[bench]]
name = "wal_throughput"
harness = false
